2004-12-10
	* document -M and -r in manpage (Doug Porter <dsp@dsp.name>)

2004-07-22
	* fix buffer overflow in items.c with 250 byte keys along with
	  other info on the same line going into a 256 byte char[].
	  thanks to Andrei Nigmatulin <anight@monamour.ru>
	
2004-06-15
	* immediate deletes weren't being unlinked a few seconds,
	  preventing "add" commands to the same key in that time period.
	  thanks to Michael Alan Dorman <mdorman@debian.org> for the
	  bug report and demo script.
	
2004-04-30
	* released 1.1.11

2004-04-24
	* Avva: Add a new command line option: -r , to maximize core file
	limit.

2004-03-31
	* Avva: Use getrlimit and setrlimit to set limits for number of
	simultaneously open file descriptors. Get the current limits and
	try to raise them if they're not enough for the specified (or the
	default) setting of max connections.
	
2004-02-24
	* Adds a '-M' flag to turn off tossing items from the cache.
	  (Jason Titus <jtitus@postini.com>)

2004-02-19 (Evan)
	* Install manpage on "make install", etc.

2003-12-30 (Brad)
	* remove static build stuff.  interferes with PAM setuid stuff
	  and was only included as a possible fix with the old memory
	  allocator.  really shouldn't make a difference.
	* add Jay Bonci's Debian scripts and manpage
	* release version 1.1.10

2003-12-01 (Avva)
	* New command: flush_all, causes all existing items to
	  be invalidated immediately (without deleting them from
	  memory, merely causing memcached to no longer return them).
2003-10-23
	* Shift init code around to fix daemon mode on FreeBSD,
	* and drop root only after creating the server socket (to
	* allow the use of privileged ports)
	* version 1.1.10pre

2003-10-09
	* BSD compile fixes from Ryan T. Dean
	* version 1.1.9
	
2003-09-29
	* ignore SIGPIPE at start instead of crashing in rare cases it
	  comes up.  no other code had to be modified, since everything
	  else is already dead-connection-aware.  (avva)
	